--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "homepage": "https://shlov.github.io/project-42-front/",
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.0",
     "@fontsource/inter": "^4.5.15",
     "@fontsource/manrope": "^4.5.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "formik": "^2.2.9",
     "modern-normalize": "^2.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "redux-persist": "^6.0.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
