--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "modern-normalize": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
